# sogs

./: README.md  pyproject.toml  sogs_compression.py
src/sogs/: cli.py  sogs_compression.py
