[project]
name = "sogs"
version = "1.0.0"
description = "Standalone compression tool for gaussian splat .plys"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name="Vincent Woo", email="me@vincentwoo.com" }]

dependencies = [
    "numpy",
    "torch",
    "torchpq",
    "plas@git+https://github.com/fraunhoferhhi/PLAS.git",
    "plyfile"
]

[project.scripts]
sogs-compress = "sogs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sogs"]

[tool.hatch.metadata]
allow-direct-references = true